Add updated file

--- a/quiettime.html
+++ b/quiettime.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-10-03 Thu 14:24 -->
+<!-- 2024-10-03 Thu 16:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -200,7 +200,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org68dae37">1. 2 PETER 1:1-11: THE LONG WAY HOME</a></li>
+<li><a href="#orga0ff848">1. 2 PETER 1:1-11: THE LONG WAY HOME</a></li>
+<li><a href="#org2fab0d3">2. 2 PETER 1:12-21: IF I SHOULD DIE . . .</a></li>
 </ul>
 </div>
 </div>
@@ -217,8 +218,8 @@ This letter does not tell us how to escape suffering, but instead to expect it. 
 </p>
 
 
-<div id="outline-container-org68dae37" class="outline-2">
-<h2 id="org68dae37"><span class="section-number-2">1.</span> 2 PETER 1:1-11: THE LONG WAY HOME</h2>
+<div id="outline-container-orga0ff848" class="outline-2">
+<h2 id="orga0ff848"><span class="section-number-2">1.</span> 2 PETER 1:1-11: THE LONG WAY HOME</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 How does a person get to heaven? Is it by proper knowledge of Christian doctrines? Or by godly living? Is it by faith in Christ's gift of salvation? Or by working according to Christ's goals and principles? Is it by God's call to us to be his own? Or by our own endurance with God until the day we die? Weighty issues. And with them, Peter opens his second letter.
@@ -266,10 +267,71 @@ Pray for the inner changes you think God is calling for within you.
 </p>
 </div>
 </div>
+
+
+
+
+<div id="outline-container-org2fab0d3" class="outline-2">
+<h2 id="org2fab0d3"><span class="section-number-2">2.</span> 2 PETER 1:12-21: IF I SHOULD DIE . . .</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+For more context before you begin studying, read this introduction to the book of 2 Peter.
+</p>
+
+<p>
+In 1976 Joe Bayley lay on a gurney outside an operating room at the Mayo Clinic's Methodist Hospital. He was scheduled for a minor operation. He'd probably be shuffling through the hospital hallway in a couple of days. But what if he just didn't wake up?
+</p>
+
+<p>
+Joe's musings on that possibility left readers with a small thought-provoking book titled, appropriately, Heaven. In it he speaks of his faith in Jesus Christ and his hope here-and hereafter. It has influenced children and adults, believers and nonbelievers to follow Christ. Ten years later, Joe again lay on a gurney outside the operating room. The operation was a little more serious this time-his heart. But still, at Mayo, it was routine. But in 1986, when Joe woke up, it was hereafter.
+</p>
+
+<p>
+<b>Warming Up to God</b>
+</p>
+
+<p>
+As you think back over why you believe what you believe, who or what were the major influences in your life? Praise God for the privilege of knowing him.
+</p>
+
+<p>
+Read 2 Peter 1:12-21
+</p>
+
+<p>
+<b>Discovering the Word</b>
+</p>
+
+<ul class="org-ul">
+<li>What phrases here create a picture of Peter's view of death (vv. 13-15)?</li>
+<li>Based on these phrases, how would you describe Peter's attitude about death?</li>
+<li>What difference would it make to those who knew Peter that his teachings about Jesus came from an "eyewitness of his majesty" (v. 16)?</li>
+<li>What do verses 19-21 show about the origin and purpose of Scripture?</li>
+</ul>
+
+<p>
+<b>Applying the Word</b>
+</p>
+
+<ul class="org-ul">
+<li>What do you hope will be your own feelings when you approach death?</li>
+<li>What could you be doing during your lifetime to build toward a "good death"?</li>
+<li>Peter did not want his readers to be so dependent on him that their faith would fall apart after his death. Who would you like to influence with your faith in your lifetime, and how can you best go about it?</li>
+</ul>
+
+<p>
+<b>Responding in Prayer</b>
+</p>
+
+<p>
+Thank God for the gift of Scripture and the ways in which it increases our faith.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Khaijamang Mate</p>
-<p class="date">Created: 2024-10-03 Thu 14:24</p>
+<p class="date">Created: 2024-10-03 Thu 16:10</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
